# rag_fastapi

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: query_route.py
app/core/: config..py  config.py
app/schemas/: rag.py
app/services/: rag_services.py
app/tests/: test_main.py
app/utils/: dependencies.py
