[tool.poetry]
name = "rag-fastapi"
version = "0.1.0"
description = "RAG project with FastAPI, LangChain, and MongoDB"
authors = ["Ramzan-Ali12 <m.ramzan.iub.edu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pymongo = "^4.10.1"
langchain = "^0.3.4"
langchain-mongodb = "^0.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
